; ModuleID = '/home/carl/AnghaBench/h2o/lib/common/extr_http3client.c_on_send_stop.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/common/extr_http3client.c_on_send_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.st_h2o_http3client_req_t* }
%struct.st_h2o_http3client_req_t = type { i32 }

@H2O_HTTP3_ERROR_REQUEST_CANCELLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32)* @on_send_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @on_send_stop(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.st_h2o_http3client_req_t*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load %struct.st_h2o_http3client_req_t*, %struct.st_h2o_http3client_req_t** %8, align 8
  store %struct.st_h2o_http3client_req_t* %9, %struct.st_h2o_http3client_req_t** %6, align 8
  %10 = icmp eq %struct.st_h2o_http3client_req_t* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %21

12:                                               ; preds = %2
  %13 = load %struct.st_h2o_http3client_req_t*, %struct.st_h2o_http3client_req_t** %6, align 8
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @handle_input_error(%struct.st_h2o_http3client_req_t* %13, i32 %14)
  %16 = load %struct.st_h2o_http3client_req_t*, %struct.st_h2o_http3client_req_t** %6, align 8
  %17 = load i32, i32* @H2O_HTTP3_ERROR_REQUEST_CANCELLED, align 4
  %18 = call i32 @close_stream(%struct.st_h2o_http3client_req_t* %16, i32 %17)
  %19 = load %struct.st_h2o_http3client_req_t*, %struct.st_h2o_http3client_req_t** %6, align 8
  %20 = call i32 @destroy_request(%struct.st_h2o_http3client_req_t* %19)
  store i32 0, i32* %3, align 4
  br label %21

21:                                               ; preds = %12, %11
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @handle_input_error(%struct.st_h2o_http3client_req_t*, i32) #1

declare dso_local i32 @close_stream(%struct.st_h2o_http3client_req_t*, i32) #1

declare dso_local i32 @destroy_request(%struct.st_h2o_http3client_req_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
